--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "js-sha512": "^0.7.1",
+    "mysql": "^2.15.0",
     "npm": "^5.7.1",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.12.9"
   },
   "repository": {
@@ -31,6 +35,6 @@
     "url": "https://github.com/vinidg/login-electron.git"
   },
   "win": {
-   "target": "NSIS"
-}
+    "target": "NSIS"
+  }
 }
