--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
   "author": "Vinicius Duarte",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^1.8.2",
+    "electron": "^2.0.1",
     "electron-builder": "^20.2.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0",
+    "connect-mysql": "^2.1.7",
+    "consign": "^0.1.6",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.2.0",
     "jquery": "^3.3.1",
     "js-sha512": "^0.7.1",
     "mysql": "^2.15.0",
     "npm": "^5.7.1",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.12.9"
   },
