--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "bootstrap": "^4.0.0",
     "connect-mysql": "^2.1.7",
     "consign": "^0.1.6",
+    "crypto": "^1.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
     "jquery": "^3.3.1",
-    "js-sha512": "^0.7.1",
     "mysql": "^2.15.0",
     "npm": "^5.7.1",
     "passport": "^0.4.0",
