--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "electron-prebuilt": "^1.4.13"
   },
   "dependencies": {
-    "connect-mysql": "^2.1.7",
-    "mysql": "^2.15.0",
     "body-parser": "^1.15.2",
+    "connect-mysql": "^2.1.7",
     "consign": "^0.1.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "express-ejs-layouts": "^2.4.0",
     "express-session": "^1.14.1",
-    "express-validator": "^2.20.8"
+    "express-validator": "^2.20.8",
+    "mysql": "^2.15.0"
   },
   "repository": {
     "type": "git",
