--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "author": "Vinicius Duarte",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^2.0.1",
-    "electron-builder": "^20.2.1",
+    "electron": "^4.0.6",
+    "electron-builder": "^20.39.0",
     "electron-prebuilt": "^1.4.13"
   },
   "dependencies": {
@@ -29,8 +29,7 @@
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.4.0",
     "express-session": "^1.14.1",
-    "express-validator": "^2.20.8",
-    "mysql": "^2.15.0"
+    "express-validator": "^5.3.1"
   },
   "repository": {
     "type": "git",
